# prompt_deep_seek

./: .gitignore  CHANGELOG.md  build_and_test.sh  deepseek_bash_20250901_a04831.sh  project_path.md  setup.sh
candle_stick_plotter/: Cargo.toml  HistoricalData_1756580762948.csv  README.md  build_and_test.sh
candle_stick_plotter/.github/workflows/: ci.yml
candle_stick_plotter/src/: data_processor.rs  main.rs  plotter.rs  utils.rs
candle_stick_plotter/tests/: integration_tests.rs
my_candle_stick_project/: Cargo.toml
my_candle_stick_project/src/: main.rs  plotter.rs
