[package]
name = "candle_stick_plotter"
version = "0.1.0"
edition = "2024"
description = "A candlestick plotter with CSV data processing"
authors = ["Your Name"]
license = "MIT"
readme = "README.md"

[workspace]

[dependencies]
eframe = { version = "0.32.1", features = ["default"] }
# eframe = "0.32.1"
egui_plot = { version = "0.33.0" }
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
anyhow = "1.0.82"
thiserror = "2.0.16"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.27"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
mockall = "0.13.1"
